# db-imdb-zealand

./: .gitignore  Cargo.toml  docker-compose.yaml  init.sh
.cargo/: config.toml
migrations/2024-03-17-090550_create_names/: down.sql  up.sql
migrations/2024-03-17-090814_create_titles/: down.sql  up.sql
migrations/2024-03-17-090959_create_akas/: down.sql  up.sql
migrations/2024-03-18-130803_create_serial_and_index/: up.sql
migrations/2024-03-18-130803_serial_index_cleanup/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs  utils.rs
src/api/: mod.rs  structs.rs  utils.rs
src/api/mutate/: mod.rs  person.rs  title.rs
src/api/search/: mod.rs  people.rs  titles.rs
src/api/view/: mod.rs
src/api/view/person/: crew.rs  mod.rs  principals.rs
src/api/view/title/: crew.rs  mod.rs  principals.rs
src/insert/: akas.rs  crew.rs  mod.rs  name.rs  principals.rs  title.rs
