[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["postgres"] }
rayon = "1.8.1"
serde = { version = "1.0.197", features = ["derive"] }
spinners = "4.1.1"
sqids = "0.4.1"
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"

[patch.crates-io]
diesel = { git = "https://github.com/weiznich/diesel", rev = "eb721e9e44c8a7321fc68118165f92327a03603f" }

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3